# desk-pet-robot-driven-by-rasperberripi-5

./: FIR.docx  README.md  Raspberry Pi 5 Model B.SLDASM  User Library-128x64I2COLEDDisplayAdafruit.sldprt  code rotate.180  con_sticker  ensemble-rough.SLDASM  face_con  index.html  oled  results_display_video_links
Independent functional module testing/: OLED.cpp  README.md  rotate-initial.cpp
Independent functional module testing/Raspberry PI backup/: main.cpp  oled display.cpp  voice control servo.h  voice display.h
PCB(schematic and layout)/: PCB1.pcbdoc  schematic of PCB.epro
Speech Recognition Code (Version 1)/: README.md
Speech Recognition Code (Version 1)/audio-initialize/: curl_request.cpp  whisper.cpp  (+1 more)
Speech_recognition_code_final_version/: README.md
Voice control servo/: 4_servo_motor_control .h  4_servo_motor_control.cpp  README.md  ServoController.cpp  ServoController.h  final_version_main.cpp  main.cpp for 1 servo  main.cpp for 2 servo  rotate 180.cpp  rotate 180.h  servo.h  servo_all.cpp  servo_control_2pin.cpp  servo_control_2pin.h
audio_project/: CMake.txt  main.cpp  microphone  microphone-initialize.cpp  microphone-initialize.h  minimal_mfcc_dtw.cpp
code /: oled.sicker
code of audio/: CMakeLists.txt  README.md  start_whisper_server.sh  voice_record.cpp
code of audio/audio-initialize/: command.cpp  command.h  curl_request.h  main.cpp  voice_max_loudness.h  voice_record.h  whisper.cpp  whisper.h
code of audio/audio-initialize/curl_request.h/: 1
new-voice/: README.md  config.json
solidworks/: body.SLDPRT  rough_body.SLDPRT
(+9 files in other folders)
